testdata/de/dm/intellij/liferay/language/jsp/LiferayJspJavaDeprecationInspectionTest/view.jsp
<%@ page import=<warning descr="The classes from package com.liferay.util.bridges.mvc in util-bridges.jar were moved to a new package com.liferay.portal.kernel.portlet.bridges.mvc in portal-service.jar. (see LPS-50156)">"<error descr="Cannot resolve class or package 'com'">com</error>.<error descr="Cannot resolve class or package 'liferay'">liferay</error>.<error descr="Cannot resolve class or package 'util'">util</error>.<error descr="Cannot resolve class or package 'bridges'">bridges</error>.<error descr="Cannot resolve class or package 'mvc'">mvc</error>.<error descr="Cannot resolve class 'MVCPortlet'">MVCPortlet</error>"</warning> %>
